test/badOpAssign.slq
def main(){
	x:=1337;
	x+=2:uint[2]; // error
	return x;
}
